projetos/local/nexus-adm/nexus-adm-webapp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-adm-webapp-route
  namespace: nexus-adm-webapp
spec:
  parentRefs:
  - name: nexus-gateway
    namespace: nginx-gateway
    sectionName: https
  hostnames:
  - console.nexusplatform.com.br
  rules:
  - backendRefs:
    - name: nexus-adm-webapp-service
      port: 80
